--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 VITE_CURRENCY = Rs.
-VITE_BACKEND_URL = https://bazario-ecommerce-backend.vercel.app
+VITE_BACKEND_URL = http://localhost:4000
 
 # http://localhost:4000
 
-# https://bazario-ecommerce-backend.vercel.app
 
 
 
